Use log4j2 and ecs-logging-java as opposed to simple-logger
Tail that log and send to APM Server to the not yet existing
/intake/v2/logs endpoint